--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ ul {
 }
 
 img {
-  width: 400px;
-  height: auto;
+  width: 550px;
+  height: 250px;
 }
 
 h1, p {
@@ -30,7 +30,7 @@ button {
 }
 
 #logo-and-links {
-  padding: 20px;
+  padding-top: 20px;
   background-color: #1F2937;
   display: flex;
   justify-content: space-between;
@@ -50,14 +50,10 @@ button {
 }
 
 #description-and-image {
-  padding: 80px;
+  padding: 100px;
   display: flex;
   background-color: #1F2937;
   gap: 50px;
-}
-
-#description > * {
-  flex: 1;
 }
 
 #description > h1 {
@@ -82,6 +78,6 @@ button {
 
 #logo-and-links,
 #description-and-image {
-  padding-right: 180px;
-  padding-left: 180px;
+  padding-right: 220px;
+  padding-left: 220px;
 }
