--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@ ul {
   padding: 0;
 }
 
-img {
-  width: 550px;
-  height: 250px;
-}
-
 h1, p {
   padding: 0;
   margin: 0;
@@ -63,6 +58,11 @@ button {
 
 #description > p {
   color: #E5E7EB;
+}
+
+#penguin {
+  width: 550px;
+  height: 250px;
 }
 
 
