--- a/style.css
+++ b/style.css
@@ -4,14 +4,9 @@ body {
   margin: 0;
 }
 
-ul {
+ul, h1, h2, p {
   margin: 0;
   padding: 0;
-}
-
-h1, p {
-  padding: 0;
-  margin: 0;
 }
 
 button {
@@ -65,8 +60,36 @@ button {
   height: 250px;
 }
 
+#content {
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
 
+#content-header {
+  text-align: center;
+  font-size: 36px;
+  color: #1F2937;
+  margin-bottom: 50px;
+}
 
+#items {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.item > img {
+  width: 150px;
+  height: 150px;
+  border: 3px solid #3882F6;
+  border-radius: 12px;
+}
+
+.item > p {
+  text-align: center;
+  width: 150px;
+  color: #666;
+}
 
 
 
@@ -77,7 +100,8 @@ button {
 
 
 #logo-and-links,
-#description-and-image {
+#description-and-image,
+#content {
   padding-right: 220px;
   padding-left: 220px;
 }
