--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ button {
   font-size: 16px;
 }
 
+footer {
+  text-align: center;
+  padding: 40px;
+  background-color: #1F2937;
+  color: #DDD;
+}
+
 #logo-and-links {
   padding-top: 20px;
   background-color: #1F2937;
